# todo-tracker

./: README.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
backend/todo_tracker/: config.py  main.py
backend/todo_tracker/alembic/: env.py
backend/todo_tracker/alembic/versions/: 40751e5ef69e_.py  e838d1a960bf_.py
backend/todo_tracker/db/: base.py
backend/todo_tracker/db/crud/: task_crud.py  user_crud.py
backend/todo_tracker/db/models/: task.py  user.py
backend/todo_tracker/dependencies/: db_dependencies.py  env_dependencies.py  jwt_dependencies.py
backend/todo_tracker/redis/: redis_config.py
backend/todo_tracker/routers/: auth.py  task.py
backend/todo_tracker/schemas/: jwt_token_schemas.py  task_schemas.py  user_schemas.py
backend/todo_tracker/tests/: conftest.py  test_jwt_endpoints.py  test_task_endpoints.py  test_user_endpoints.py
backend/todo_tracker/utils/: auth.py  jwt.py
gateway/: Dockerfile  aiohttp_server_config.py
infra/: docker-compose.yml
